# vms-devops

./: .env  Makefile  README.md  demo.txt  docker-compose.yml  nginx.conf
backend/: Dockerfile  pyproject.toml  requirements.txt  run.py
backend/src/app/: main.py
backend/src/app/api/: device_info_router.py  live_stream_router.py  ptz_controls_router.py  video_settings_router.py
backend/src/app/config/: register.py  setting.py
backend/src/app/schemas/: DeviceInfoReqSch.py  FrameBitRateSch.py
backend/src/app/services/: live_stream_service.py
frontend/: .gitignore  Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: DeviceDiscovery.tsx  DeviceSetting.css  DeviceSetting.tsx  LiveTab.css  LiveTab.tsx
jenkins/: Jenkinsfile.backend  Jenkinsfile.frontend
